--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
 							<a href="#history" class="menu__link">история</a>
 						</li>
 						<li>
-							<!-- <a href="#modern" class="menu__link">современные моноколеса</a> -->
+							<a href="#modern" class="menu__link">современные моноколеса</a>
 						</li>
 						<li>
 							<a href="#limitations" class="menu__link">недостатки</a>
